# PubmedFetcher

./: README.md  cli.py  pubmedProjectReport.docx  pyproject.toml  results.csv
my_first_pubmed_project/: api.py  exporter.py  main.py  utils.py
tests/: test_api.py  test_utils.py
